[package]
name = "pcw_regrs"
version = "1.3.0"
edition = "2021"
publish = false    # prevent accidental publishing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-traits = "0.2.15"
ordered-float = "3.2.0"
derive-new = "0.5"
maybe-owned = "0.3.4"
ndarray = { version = "0.15.6", features = ["serde"] }
polyfit-residuals = { version = "0.6.1" }
pcw_fn = { version = "0.2.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"], optional = true }
thiserror = "1.0.38"
is_sorted = "0.1.1"
cfg-if = "1.0.0"
maybe-debug = "0.1.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.4"
smallvec = { version = "1.9.0", features = ["const_new", "const_generics"] }

[[bench]]
name = "noise_bench"
harness = false

[features]
serde = ["dep:serde"]
nightly-only = ["polyfit-residuals/nightly-only"]
default = ["serde"]
# replaces the usual metric d with d ⋅ ((tᵣ - tₗ)/T - log((tᵣ - tₗ)/T)) / n
# where tₗ,tᵣ are the left and right boundaries of a subinterval, T the
# total time interval length and n the number of samples on that interval. 
alternate_penalty = []
parallel_rayon = ["polyfit-residuals/parallel_rayon"]
