[package]
name = "pcw_regrs"
version = "1.6.0"
edition = "2021"
publish = false    # prevent accidental publishing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
derive-new = "0.5.9"
ndarray = { version = "0.15.6", features = ["serde"] }
ordered-float = { version = "3.7.0", features = ["serde"] }
pcw_fn = { version = "0.2.1", features = ["serde"] }
thiserror = "1.0.40"
polyfit-residuals = { version = "0.6.1", features = ["parallel_rayon"] }
num-traits = "0.2.15"
itertools = "0.11.0"
serde = { version = "1.0.152", features = ["derive"], optional = true }
rayon = { version = "1.7.0", optional = true }
maybe-debug = "0.1.0"
rtrb = { version = "0.2.3", optional = true }
indoc = "2.0.3"

[dev-dependencies]
maybe-debug = "0.1.0"

[features]
serde = ["dep:serde"]
nightly-only = ["polyfit-residuals/nightly-only"]
default = ["serde", "dofs-sub-one"]
parallel_rayon = ["dep:rayon", "polyfit-residuals/parallel_rayon"]
# If this feature is enabled then a segment of n data points is allowed no more than n-1 dofs
# rather than the n dofs we usually allow. This behaviour corresponds to the preconditions of
# the uniqueness proof and makes intuitive sense when considering the locality of each point:
# by not going up to full interpolation any point necessarily influences the full model whereas
# interpolation would allow it to influence only a single segment. 
dofs-sub-one = []
