[package]
name = "pcw_regrs_py"
version = "1.8.1"
edition = "2021"
publish = false       # prevent accidental publishing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pcw_regrs_py"
crate-type = ["cdylib"]

[profile.release]
# debug = 1
# lto = true
# codegen-units = 1

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = "0.20.0"
ordered-float = { version = "4.1.1", features = ["std"] }
pcw_regrs = { version = "1.8.0", path = "../pcw_regrs", features = [
    "dofs-sub-one",
] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
derive-new = "0.6.0"
# num-traits = "0.2.15"
pcw_fn = "0.2.1"

[dev-dependencies]
approx = "0.5.1"

[features]
show_times = []
serde = ["pyo3/serde", "ordered-float/serde", "pcw_regrs/serde", "pcw_fn/serde"]
default = ["serde"]
parallel_rayon = ["pcw_regrs/parallel_rayon"]
