[package]
name = "pcw_regrs_py"
version = "1.10.2"
edition = "2021"
publish = true        # prevent accidental publishing

description = "Fast, optimal, extensible and cross-validated heterogeneous piecewise polynomial regression for timeseries."
repository = "https://github.com/SV-97/pcw-regrs"
license = "MIT OR Apache-2.0"
keywords = ["regression", "piecewise", "polynomial"]
categories = [
    "mathematics",
    "algorithms",
    "science",
    "simulation",
    "science::neuroscience",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pcw_regrs_py"
crate-type = ["cdylib"]

[profile.release]
lto = true              # enable full link time optimization
codegen-units = 1       # build on one core to maximize possible optimizations
debug = true            # write debug symbols into output binary
opt-level = 3           # enable all optimizations
overflow-checks = false # Disable integer overflow checks.

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
numpy = "0.24.0"
ordered-float = { version = "4.1.1", features = ["std"] }
pcw_regrs = { version = "1.9.0", path = "../pcw_regrs", features = [
    "dofs-sub-one",
] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
derive-new = "0.7.0"
# num-traits = "0.2.15"
pcw_fn = "0.2.1"

[dev-dependencies]
approx = "0.5.1"

[features]
show_times = []
serde = ["pyo3/serde", "ordered-float/serde", "pcw_regrs/serde", "pcw_fn/serde"]
default = ["serde", "pcw_regrs/parallel_rayon"]
parallel_rayon = ["pcw_regrs/parallel_rayon"]
