[build-system]
requires = ["maturin>=0.13,<0.14", "pycw_fn>=0.1.2", "numpy>=1.25"]
build-backend = "maturin"

[project]
name = "pcw_regrs_py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["piecewise", "regression", "math", "science", "algorithm"]

[project.urls]
"Homepage" = "https://github.com/SV-97/pcw-regrs"
"Bug Tracker" = "https://github.com/SV-97/pcw-regrs/issues"
